[package]
name = "audio-flux"
version = "1.14.0"
description = "A next-gen virtual audio mixer"
authors = ["Enzo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Áudio:
cpal = "0.15"   
rodio = "0.18" 
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[lib]
name = "audio_flux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
